--- a/package.json
+++ b/package.json
@@ -11,6 +11,8 @@
   "license": "ISC",
   "dependencies": {
     "discord.js": "^12.5.1",
+    "dotenv": "^8.2.0",
+    "monk": "^7.3.2",
     "nodemon": "^2.0.6"
   }
 }
