--- a/config.json
+++ b/config.json
@@ -1,4 +1,4 @@
 {
-    "TOKEN":"Nzg3MTM1ODM3Mjc5ODc5MTgw.X9QjXw.9_x0DS9-74gvykGhk6lgH48srjw",
-    "PREFIX":"dod"
+    "TOKEN":"NzI4NTkxNTE5MTM2ODc0NTA2.Xv8nug.-LEGpYhNeTmHsYIZBE1Cg118KHc",
+    "PREFIX":"testdod"
 }
